# ============================================================================
# uffs-diag: Diagnostic Tools for MFT Analysis
# ============================================================================
# Offline, cross-platform diagnostic tools for analyzing MFT snapshots.
# These tools operate on raw MFT files (.raw) and Parquet exports (.parquet)
# without requiring live NTFS access.
#
# Binaries:
#   - analyze_mft_parents: Analyze parent/child coverage in Parquet files
#   - dump_mft_records: Dump raw MFT record headers for specific FRS values
#   - scan_mft_magic: Scan magic values across all records in a raw MFT
#   - dump_mft_extents: (Windows-only) Dump $MFT extent list for a drive
#   - cross_check_mft_reference: Cross-check MFT records against reference CSV
#   - compare_raw_mft: Compare two raw MFT files record-by-record
#   - inspect_mft_record_flow: Inspect raw->fixup->parse pipeline for FRS
#   - analyze_diff: Deep comparison of C++ vs Rust UFFS outputs
#   - compare_scan_parity: Comprehensive C++ vs Rust scan output parity check
# ============================================================================

[package]
name = "uffs-diag"
description = "Diagnostic tools for UFFS MFT analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# ─────────────────────────────────────────────────────────────────────────────
# Binaries
# ─────────────────────────────────────────────────────────────────────────────
[[bin]]
name = "analyze_mft_parents"
path = "src/bin/analyze_mft_parents.rs"

[[bin]]
name = "dump_mft_records"
path = "src/bin/dump_mft_records.rs"

[[bin]]
name = "scan_mft_magic"
path = "src/bin/scan_mft_magic.rs"

[[bin]]
name = "dump_mft_extents"
path = "src/bin/dump_mft_extents.rs"

[[bin]]
name = "cross_check_mft_reference"
path = "src/bin/cross_check_mft_reference.rs"

[[bin]]
name = "compare_raw_mft"
path = "src/bin/compare_raw_mft.rs"

[[bin]]
name = "inspect_mft_record_flow"
path = "src/bin/inspect_mft_record_flow.rs"

[[bin]]
name = "analyze_diff"
path = "src/bin/analyze_diff.rs"

[[bin]]
name = "compare_scan_parity"
path = "src/bin/compare_scan_parity.rs"

# ─────────────────────────────────────────────────────────────────────────────
# Dependencies (minimal set for diagnostic tools)
# ─────────────────────────────────────────────────────────────────────────────
[dependencies]
# Error handling (used by all binaries)
anyhow.workspace = true

# Date/time formatting for reports
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# MFT reading (for raw file parsing and Windows extent diagnostics)
uffs-mft.workspace = true

# Polars (for Parquet analysis)
uffs-polars = { version = "0.2.9", path = "../uffs-polars" }

# ─────────────────────────────────────────────────────────────────────────────
# Lints (inherit from workspace)
# ─────────────────────────────────────────────────────────────────────────────
[lints]
workspace = true

