# ============================================================================
# uffs-diag: Diagnostic Tools for MFT Analysis
# ============================================================================
# Offline, cross-platform diagnostic tools for analyzing MFT snapshots.
# These tools operate on raw MFT files (.raw) and Parquet exports (.parquet)
# without requiring live NTFS access.
#
# Binaries:
#   - analyze_mft_parents: Analyze parent/child coverage in Parquet files
#   - dump_mft_records: Dump raw MFT record headers for specific FRS values
#   - scan_mft_magic: Scan magic values across all records in a raw MFT
#   - dump_mft_extents: (Windows-only) Dump $MFT extent list for a drive
#   - cross_check_mft_reference: Cross-check MFT records against reference CSV
#   - compare_raw_mft: Compare two raw MFT files record-by-record
#   - inspect_mft_record_flow: Inspect raw->fixup->parse pipeline for FRS
#   - analyze_diff: Deep comparison of legacy vs Rust UFFS outputs
#   - compare_scan_parity: Comprehensive legacy vs Rust scan output parity check
# ============================================================================

[package]
name = "uffs-diag"
description = "Diagnostic tools for UFFS MFT analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# Phase R6 of `release-automation-plan.md` step 2: explicit `publish = false`
# at the crate level (NOT just at `release-plz.toml`).  Belt-and-suspenders:
# - `release-plz.toml::publish = false` blocks the release-plz workflow from
#   ever calling `cargo publish` for this crate.
# - This `publish = false` blocks LOCAL `cargo publish -p uffs-diag` from a
#   developer's machine even if they bypass release-plz.
#
# Rationale: `uffs-diag` is a workspace-only diagnostic toolchain.  Its
# binaries (`analyze_mft_parents`, `dump_mft_records`, `compare_raw_mft`,
# `compare_scan_parity`, `inspect_mft_record_flow`, …) operate on raw MFT
# snapshots and Parquet exports — they're internal correctness-validation
# instruments, not user-facing tools.  Shipping them to crates.io would
# (a) clutter the crates.io namespace, (b) bind us to API stability we
# don't owe consumers, and (c) leak diagnostic dependencies (`uffs-polars`
# git pin) into a published crate where they'd be a compatibility footgun.
#
# Per workspace-layout in root `Cargo.toml::[workspace.members]`, this is
# explicitly tagged "Retained workspace-only diagnostic tools (not shipped
# in dist/)".  Inheriting the workspace default `publish = false` here
# makes that retention contract enforceable at `cargo publish` time, not
# just by convention.
#
# Posture: **permanently non-publishable** — distinct from the 8
# Polars-blocked deferred-publishable crates (uffs-mft, uffs-core, etc.).
# uffs-diag would remain non-publishable even if Polars upstream
# released its nightly-API patches; it is internal-by-design tooling.
publish.workspace = true

# ─────────────────────────────────────────────────────────────────────────────
# Binaries
# ─────────────────────────────────────────────────────────────────────────────
[[bin]]
name = "analyze_mft_parents"
path = "src/bin/analyze_mft_parents.rs"

[[bin]]
name = "dump_mft_records"
path = "src/bin/dump_mft_records.rs"

[[bin]]
name = "scan_mft_magic"
path = "src/bin/scan_mft_magic.rs"

[[bin]]
name = "dump_mft_extents"
path = "src/bin/dump_mft_extents.rs"

[[bin]]
name = "cross_check_mft_reference"
path = "src/bin/cross_check_mft_reference.rs"

[[bin]]
name = "compare_raw_mft"
path = "src/bin/compare_raw_mft.rs"

[[bin]]
name = "inspect_mft_record_flow"
path = "src/bin/inspect_mft_record_flow.rs"

[[bin]]
name = "analyze_diff"
path = "src/bin/analyze_diff.rs"

[[bin]]
name = "compare_scan_parity"
path = "src/bin/compare_scan_parity.rs"

[[bin]]
name = "verify_iocp_capture"
path = "src/bin/verify_iocp_capture.rs"

# ─────────────────────────────────────────────────────────────────────────────
# Dependencies (minimal set for diagnostic tools)
# ─────────────────────────────────────────────────────────────────────────────
[dependencies]
# Error handling (used by all binaries)
anyhow.workspace = true

# Date/time formatting for reports
chrono.workspace = true
rayon.workspace = true

# Cryptographic hashing for verification
sha2.workspace = true
hex.workspace = true

# MFT reading (for raw file parsing and Windows extent diagnostics)
uffs-mft.workspace = true

# Polars (for Parquet analysis)
uffs-polars.workspace = true

# ─────────────────────────────────────────────────────────────────────────────
# Lints (inherit from workspace)
# ─────────────────────────────────────────────────────────────────────────────
[lints]
workspace = true
