# ============================================================================
# uffs-format: Unified CSV/columnar formatter
# ============================================================================
# Layer 1 shared crate.  Holds the single canonical CSV output formatter
# that both `uffs-core` (daemon-side `--out=file`) and `uffs-client` (CLI
# stdout path) delegate to, so `uffs '*' --out=file foo.csv` and
# `uffs '*' > foo.csv` produce **byte-identical output**.
#
# Before v0.5.62 the daemon had its own `DisplayRow` formatter in
# `uffs_core::output::display_rows` and the CLI had a duplicate
# `write_columnar` walking `serde_json::Value`.  The two diverged over
# time (header newlines, quoting rules, `--pos`/`--neg` handling,
# `--tz-offset` respect).  This crate is the source of truth for the
# shared byte format.
#
# Thin-client invariant: zero polars, tokio, or reqwest dependencies.
# The `FormatRow` trait lets the crate stay agnostic about whether its
# caller holds `DisplayRow` (core) or `SearchRow` (client).
# ============================================================================

[package]
name = "uffs-format"
description = "Unified CSV/columnar formatter for UFFS (shared by daemon + thin CLI)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# Phase R6→R8 deviation row 5 — historical context (issue #216 closed
# this entanglement on 2026-05-13).  This crate previously inherited
# uffs-polars's publishability deferral via the `uffs-mft → uffs-polars`
# dep edge that existed solely to call `uffs_mft::len_to_u16` from
# `src/writer.rs`.  Issue #216 broke that edge by inlining the 3-line
# saturating-cast helper into `writer.rs::len_to_u16` (Option B from
# the issue).  The `StandardInfo::parity_attributes()` reference in
# `src/attr.rs` is a documentation cross-reference only (it doesn't
# compile against the type), so the dep was genuinely single-use.
#
# Net effect: `uffs-format` now has *no* uffs-polars in its transitive
# dep tree (verified post-removal).  Its publishability is no longer
# Polars-blocked — it can flip to `publish = true` independently of
# the uffs-polars deferral, pending its own publishability review.
# For now it inherits the workspace default (`publish = false`) to
# match the conservative "publish nothing until the architecture
# review signs off on each crate" posture established in
# `docs/architecture/release-automation-plan.md`.
publish.workspace = true

# Phase R6 of `release-automation-plan.md` step 3 — docs.rs build config.
# See `uffs-time/Cargo.toml` for the full rationale.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Foundation crate — FILETIME arithmetic in `datetime::append_datetime_native`.
# The previous `uffs-mft.workspace = true` dep was removed by issue #216
# (Option B: inline `len_to_u16` into `src/writer.rs`).
uffs-time.workspace = true

# No-alloc integer-to-string formatter for the per-row hot path.
itoa.workspace = true

# Parallel row rendering above `PARALLEL_WRITE_THRESHOLD`.
rayon.workspace = true

# Serde for `OutputColumn` (de)serialisation through the wire protocol.
serde.workspace = true

# Chrono: `OutputConfig::default()` picks up the host's local TZ offset.
# Kept optional and narrow — only `Local::now().offset().local_minus_utc()`
# from the `clock` feature.  Every other chrono code path stays in
# `uffs-core`.
chrono.workspace = true

[lints]
workspace = true
