# =============================================================================
# Cargo.toml - UFFS Legacy Crate
# =============================================================================
#
# SPDX-License-Identifier: MPL-2.0
# Copyright (c) 2025-2026 Robert Nio
#
# This crate contains legacy code from the original UFFS implementation.
# It is kept for reference and gradual migration to the new architecture.
#
# NOTE: This code is NOT actively maintained. Use the modern crates instead:
# - uffs-core: Query engine
# - uffs-mft: MFT reading
# - uffs-cli: Command-line interface
# =============================================================================

[package]
name = "uffs-legacy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Legacy UFFS code - kept for reference only"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "uffs_legacy"
path = "src/lib.rs"

[[bin]]
name = "uffs-legacy"
path = "src/main.rs"

[dependencies]
# Core dependencies used by legacy code
anyhow.workspace = true
thiserror.workspace = true

# Async runtime
tokio.workspace = true

# CLI
clap.workspace = true
colored.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
log.workspace = true

# Time
chrono.workspace = true
time.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
miette.workspace = true

# Utilities
once_cell.workspace = true
sysinfo.workspace = true
num-format.workspace = true
walkdir.workspace = true
dirs-next.workspace = true
ignore.workspace = true
bitflags.workspace = true

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows.workspace = true
wmi.workspace = true

# =============================================================================
# LEGACY CODE LINT EXCEPTIONS
# =============================================================================
# This crate contains legacy code that is not actively maintained.
# These blanket allows are acceptable here because:
# 1. The code is frozen and kept for reference only
# 2. Fixing all lints would require significant refactoring
# 3. The modern crates (uffs-core, uffs-mft, etc.) follow strict linting
# =============================================================================
[lints.clippy]
# Inherit workspace lints but override with allows for legacy code
all = "allow"
pedantic = "allow"
nursery = "allow"
cargo = "allow"

[lints.rust]
# Allow legacy code patterns
missing_docs = "allow"
dead_code = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"

