# ============================================================================
# uffs-mcp: MCP Server for UFFS (stdio + Streamable HTTP)
# ============================================================================
# Bridges AI agents (Claude, Cursor, Windsurf) to the UFFS daemon via the
# Model Context Protocol (MCP). Default: JSON-RPC over stdio.
# With `streamable-http` feature: also serves MCP over Streamable HTTP.
# ============================================================================

[package]
name = "uffs-mcp"
description = "MCP server for UFFS — bridges AI agents to the daemon (stdio + HTTP)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# Phase R6 of `release-automation-plan.md` step 3 — docs.rs build config.
# Multi-target so the platform-gated transport stack (HTTP gateway is
# cross-platform; MCP stdio plumbing has Windows-vs-Unix branches) renders
# in docs.  See `uffs-time/Cargo.toml` for the rationale on `--cfg docsrs`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

[lib]
name = "uffs_mcp"
path = "src/lib.rs"

[[bin]]
name = "uffsmcp"
path = "src/main.rs"

[[bin]]
name = "uffs-mcp-http"
path = "src/bin/http_gateway.rs"
required-features = ["streamable-http"]

[features]
default = ["streamable-http"]
streamable-http = [
  "rmcp/transport-streamable-http-server",
  "dep:axum",
  "dep:tower-service",
]

[dependencies]
# Internal
uffs-client.workspace = true

# Async — `net` re-enabled because the HTTP gateway binds a TCP
# listener and the health-check probes use `tokio::net::TcpStream`.
tokio = { workspace = true, features = ["net"] }

# MCP SDK
rmcp.workspace = true
schemars.workspace = true

# Serialization (MCP JSON-RPC)
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
dirs-next.workspace = true
tracing-appender.workspace = true

# HTTP gateway (feature-gated)
axum = { workspace = true, optional = true }
tower-service = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
rmcp = { workspace = true, features = ["client"] }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
