# ============================================================================
# uffs-mft: MFT Reading & Parsing Library
# ============================================================================
# This crate provides direct NTFS Master File Table (MFT) reading
# capabilities, outputting data as Polars DataFrames.
#
# Features:
# - Direct MFT reading (bypasses Windows file enumeration APIs)
# - Async I/O for high throughput
# - Parquet persistence for fast index loading
# - Cross-platform abstractions (Windows-only for MFT, but API is portable)
# ============================================================================

[package]
name = "uffs-mft"
description = "NTFS MFT reading library for UFFS (Ultra Fast File Search)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "uffs_mft"
path = "src/main.rs"

[dependencies]
# Internal: Polars facade
uffs-polars.workspace = true

# Data structures
bitflags.workspace = true
smallvec.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true
rayon.workspace = true
zstd = { version = "0.13.3", optional = true }

# CLI (for uffs_mft binary)
clap.workspace = true
indicatif.workspace = true

# Async runtime
tokio.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
dirs-next.workspace = true
chrono.workspace = true
hostname = "0.4.2"
rustc-hash = "2.1.1"
zerocopy.workspace = true

# Chaos test harness dependencies (ChaosMftReader is public for CLI)
rand = "0.8.5"
rand_chacha = "0.3.1"
crossbeam-channel = "0.5.15"

# Windows APIs (Windows only)
[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
sha2 = "0.10"  # For SHA256 validation in chaos tests
tracing-subscriber = { workspace = true }

[[bench]]
name = "mft_read"
harness = false

# ─────────────────────────────────────────────────────────────────────────────
# Lints: uffs-mft is a low-level NTFS parser with performance-critical hot paths.
# The monolithic parser modules (io/parser/*.rs) handle all NTFS attribute types
# inline with validated bounds checking.
#
# NOT inheriting workspace lints because:
# - Indexing/slicing without runtime overhead (bounds validated before loops)
# - Low-level NTFS parsing patterns (shadowing, single-char vars, etc.)
# - Performance-critical code paths (pedantic lints add overhead or noise)
# ─────────────────────────────────────────────────────────────────────────────
[lints.clippy]
# Core lint groups - cargo at deny, nursery/pedantic at allow for parser code
cargo = { level = "deny", priority = -1 }
nursery = { level = "allow", priority = -1 }
pedantic = { level = "allow", priority = -1 }

# Multiple crate versions are unavoidable with polars ecosystem
multiple_crate_versions = "allow"

# Critical safety lints remain active
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[features]
default = ["zstd"]
zstd = ["dep:zstd"]

